--- a/src/TabKeeper.UI.AppWeb/assets/app.scss
+++ b/src/TabKeeper.UI.AppWeb/assets/app.scss
@@ -10,10 +10,22 @@
     @apply w-screen h-screen overflow-clip;
   }
 
-  h1 {}
-  h2 {}
-  h3 {}
-  h4 {}
+  #app {
+    @apply grid grid-rows-[auto_1fr];
+  }
+
+  h1 {
+    @apply text-2xl font-bold mb-4;
+  }
+  h2 {
+    @apply text-xl font-semibold mb-3;
+  }
+  h3 {
+    @apply text-lg font-medium mb-2;
+  }
+  h4 {
+    @apply text-base font-normal mb-1;
+  }
 
   p {
     @apply text-primary-900;
