update src projects

--- a/src/TabKeeper.UI.Wasm/App.razor
+++ b/src/TabKeeper.UI.Wasm/App.razor
@@ -1,4 +1,4 @@
-﻿@using TabKeeper.Pages.Layout
+﻿@using TabKeeper.Layout
 
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
