--- a/src/TabKeeper.UI.Wasm/Layout/ShellLayout.razor
+++ b/src/TabKeeper.UI.Wasm/Layout/ShellLayout.razor
@@ -1,10 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
 <header class="w-full flex items-center p-6 bg-background">
-    <h1 class="m-0">Home</h1>
+    <a href="/" class="m-0 text-xl font-bold">Home</a>
 </header>
 
-<main class="p-2 flex flex-col overflow-y-auto">
+<main class="p-2 overflow-y-auto">
     @Body
 </main>
 
