--- a/src/TabKeeper.UI.Wasm/Components/People/PersonCircleView.razor
+++ b/src/TabKeeper.UI.Wasm/Components/People/PersonCircleView.razor
@@ -1,4 +1,4 @@
-@inherits RxViewBase<PersonViewModel>
+@inherits CoreRxComponent<PersonViewModel>
 
 <div class="relative flex items-center justify-center bg-white border border-red-500 h-10 p-3 pb-6 rounded-3xl">
     <h2>@ViewModel.Name</h2>
