--- a/src/TabKeeper.UI.Wasm/_Imports.razor
+++ b/src/TabKeeper.UI.Wasm/_Imports.razor
@@ -1,6 +1,8 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
 @using System.Reactive.Linq
+@using System.Reactive.Subjects
+@using Blazored.LocalStorage
 @using Core
 @using Core.Abstractions
 @using DynamicData
@@ -14,8 +16,13 @@
 @using Microsoft.JSInterop
 @using TabKeeper
 @using TabKeeper.Components
-@using TabKeeper.Components.Abstractions
 @using TabKeeper.Components.People
-@using TabKeeper.Components.Tabs
+@using TabKeeper.Components.RxComponents
+@using TabKeeper.People
+@using TabKeeper.Tabs
+@using Ignis.Components
 @using Ignis.Components.HeadlessUI
+@using Ignis.Components.Reactivity
 @using Ignis.Utils
+@using Core.Blazor.Components
+@using P41.FontAwesome
