--- a/src/TabKeeper.UI.Wasm/assets/_buttons.scss
+++ b/src/TabKeeper.UI.Wasm/assets/_buttons.scss
@@ -1,6 +1,6 @@
 @layer components {
   .btn {
-    @apply px-3 py-1 flex items-center justify-center rounded-lg;
+    @apply px-3 py-1 flex items-center justify-center rounded-lg outline-none;
   }
 
   .btn-primary {
