add: Annular.Translate
add: TranslateMixins

--- a/src/TabKeeper.UI.Wasm/Pages/Home/HomePage.razor
+++ b/src/TabKeeper.UI.Wasm/Pages/Home/HomePage.razor
@@ -2,6 +2,7 @@
 @inherits CoreComponent
 @inject ISyncLocalStorageService storage
 @inject NavigationManager nav
+@inject TranslateService translate
 
 <div class="h-full flex flex-col relative">
     <div class="grow overflow-y-auto space-y-2">
