--- a/src/TabKeeper.UI.Wasm/_Imports.razor
+++ b/src/TabKeeper.UI.Wasm/_Imports.razor
@@ -5,6 +5,9 @@
 @using Blazored.LocalStorage
 @using Core
 @using Core.Abstractions
+@using Core.Blazor
+@using Core.Blazor.Reactive
+@using Annular.Translate
 @using DynamicData
 @using DynamicData.Cache
 @using DynamicData.Aggregation
@@ -16,7 +19,6 @@
 @using Microsoft.JSInterop
 @using TabKeeper
 @using TabKeeper.Components
-@using TabKeeper.Components.People
 @using TabKeeper.Components.RxComponents
 @using TabKeeper.People
 @using TabKeeper.Tabs
@@ -24,5 +26,4 @@
 @using Ignis.Components.HeadlessUI
 @using Ignis.Components.Reactivity
 @using Ignis.Utils
-@using Core.Blazor.Components
 @using P41.FontAwesome
