--- a/src/TabKeeper.UI.Wasm/_Imports.razor
+++ b/src/TabKeeper.UI.Wasm/_Imports.razor
@@ -6,7 +6,8 @@
 @using Core
 @using Core.Abstractions
 @using Core.Blazor
-@using Core.Blazor.Reactive
+@using Core.Blazor.Reactive.Forms
+@using Core.Blazor.RxForms;
 @using Annular.Translate
 @using DynamicData
 @using DynamicData.Cache
@@ -19,7 +20,6 @@
 @using Microsoft.JSInterop
 @using TabKeeper
 @using TabKeeper.Components
-@using TabKeeper.Components.RxComponents
 @using TabKeeper.People
 @using TabKeeper.Tabs
 @using Ignis.Components
