implement settings page

--- a/src/TabKeeper.UI.Wasm/Pages/Home/HomePage.razor
+++ b/src/TabKeeper.UI.Wasm/Pages/Home/HomePage.razor
@@ -33,7 +33,7 @@
                 <FaSolidEllipsis class="icon" />
             </DropdownButton>
             <DropdownContent class="min-w-52 bg-primary-container px-3 py-2" Anchor="Anchor.Top | Anchor.Right">
-                <DropdownItem OnClick="@(() => nav.NavigateTo("settings"))"><FaSolidGear class="icon-xs me-2" /> @("general.settings" | translate)</DropdownItem>
+                <DropdownItem OnClick="@(() => nav.NavigateTo("settings"))"><FaSolidGear class="icon-xs me-2" /> @("settings.title" | translate)</DropdownItem>
             </DropdownContent>
         </Dropdown>
     </div>
