--- a/src/TabKeeper.UI.Wasm/Pages/Home/SettingsPage.razor
+++ b/src/TabKeeper.UI.Wasm/Pages/Home/SettingsPage.razor
@@ -2,11 +2,33 @@
 @inherits CoreComponent
 @inject TranslateService translate
 
-
+<div class="space-y-4 divide-y">
+    <div class="space-y-1">
+        <h3>@("settings.theme.title" | translate)</h3>
+        <div>
+            <select class="w-full rounded bg-primary px-2 py-1" value="@Theme.GetTheme()" @onchange="OnThemeChange">
+                <option value="auto">@("settings.theme.auto" | translate)</option>
+                <option value="dark">@("settings.theme.dark" | translate)</option>
+                <option value="light">@("settings.theme.light" | translate)</option>
+            </select>
+        </div>
+    </div>
+</div>
 
 @code {
     protected override void OnInitialized()
     {
-        ShellContext.Title = "general.settings" | translate;
+        ShellContext.Title = "settings.title" | translate;
+    }
+
+    public void OnThemeChange(ChangeEventArgs e)
+    {
+        Action execute = e.Value switch
+        {
+            "dark" => Theme.SetDark,
+            "light" => Theme.SetLight,
+            _ => Theme.SetAuto
+        };
+        execute();
     }
 }
