--- a/src/TabKeeper.UI.Wasm/Components/Dropdown.razor
+++ b/src/TabKeeper.UI.Wasm/Components/Dropdown.razor
@@ -1,6 +1,6 @@
 ﻿@inherits CoreComponent
 
-<Menu AsElement="div" class="@Class("relative")">
+<Menu AsElement="div" class="@this.Class("relative")">
     @ChildContent
 </Menu>
 
