--- a/src/TabKeeper.UI.Wasm/_Imports.razor
+++ b/src/TabKeeper.UI.Wasm/_Imports.razor
@@ -5,9 +5,10 @@
 @using Blazored.LocalStorage
 @using Core
 @using Core.Abstractions
-@using Core.Blazor
 @using Core.Blazor.Reactive.Forms
-@using Core.Blazor.RxForms;
+@using Core.Blazor.Reactive.Forms.Primitives
+@using Core.Components.Forms;
+@using Core.Reactive
 @using Annular.Translate
 @using DynamicData
 @using DynamicData.Cache
@@ -20,8 +21,6 @@
 @using Microsoft.JSInterop
 @using TabKeeper
 @using TabKeeper.Components
-@using TabKeeper.People
-@using TabKeeper.Tabs
 @using Ignis.Components
 @using Ignis.Components.HeadlessUI
 @using Ignis.Components.Reactivity
