--- a/src/TabKeeper.UI.Wasm/assets/app.scss
+++ b/src/TabKeeper.UI.Wasm/assets/app.scss
@@ -1,7 +1,6 @@
 @import "./_buttons.scss";
 @import "./_cards.scss";
 @import "./_icons.scss";
-@import "./_input.scss";
 @import "./_material-input.scss";
 
 @tailwind base;
@@ -22,67 +21,26 @@
   h1 {
     @apply text-2xl font-bold mb-4;
   }
+
   h2 {
-    @apply text-xl font-semibold mb-3;
+    @apply text-xl mb-3;
   }
+
   h3 {
     @apply text-lg font-medium mb-2;
   }
+
   h4 {
     @apply text-base font-normal mb-1;
   }
 
   p {
+    @apply text-base;
   }
 
   small {
   }
 
-  /*input[type='checkbox'] {
-    @apply relative appearance-none min-w-[22px] min-h-[22px] m-1 bg-white border-2 border-grey rounded cursor-pointer outline-none;
-
-    &:checked {
-      @apply border-grey-130;
-
-      &:before {
-        @apply absolute inset-0 flex items-center justify-center text-sm;
-        content: url(../src/assets/images/icon-check.svg);
-      }
-    }
-
-    &:focus:checked {
-      @apply border-2 border-grey-130;
-    }
-
-    &:focus:not(:checked) {
-      @apply border-2 border-grey;
-    }
-
-    &:disabled {
-      @apply cursor-default border-grey;
-    }
-  }*/
-}
-
-@layer components {
-  .material-group {
-    @apply relative;
-  }
-
-  .material-input {
-    @apply w-full placeholder:invisible rounded bg-white;
-  }
-
-  .material-label {
-    @apply absolute top-0 left-2 px-2 text-sm transition-all ease-linear select-none pointer-events-none;
-
-    @apply peer-placeholder-shown:translate-y-1/2 peer-placeholder-shown:text-gray-500;
-
-    @apply -translate-y-1/2 bg-white text-gray-950;
-    @apply peer-focus:-translate-y-1/2 peer-focus:text-gray-950;
-  }
-
-  .material-error {
-    @apply text-sm text-red-500;
+  label {
   }
 }
