--- a/src/TabKeeper.UI.Wasm/assets/_cards.scss
+++ b/src/TabKeeper.UI.Wasm/assets/_cards.scss
@@ -1,5 +1,5 @@
 @layer components {
   .card {
-    @apply rounded-lg bg-surface-variant text-gray-500 p-4;
+    @apply rounded-lg bg-surface-variant p-4;
   }
 }
