--- a/src/TabKeeper.UI.Wasm/assets/_material-input.scss
+++ b/src/TabKeeper.UI.Wasm/assets/_material-input.scss
@@ -1,24 +1,31 @@
-@layer components {
+@layer base {
+  input,
+  textarea {
+    @apply w-full p-2 rounded focus:ring-0;
+  }
+
+  .error {
+    @apply text-sm text-error;
+  }
+
   .material-input {
     @apply relative;
 
     input {
-      @apply w-full rounded border-2 bg-white p-1 text-gray-900 placeholder-transparent focus:outline-none;
-      @apply border-gray-300;
-      @apply focus:border-rose-600;
+      @apply rounded p-2 pt-5 border-0 placeholder-transparent bg-surface focus:border-on-surface focus:ring-0;
     }
 
     label {
       /* Defaults */
-      @apply pointer-events-none absolute left-2 translate-y-1/2 cursor-text bg-white transition-all;
+      @apply pointer-events-none absolute top-0 translate-y-1/2 text-on-surface cursor-text text-opacity-70 transition-all duration-200;
       /* Styling */
-      @apply text-sm font-medium text-gray-600;
-      @apply next-input-placeholder-shown:text-base next-input-placeholder-shown:text-gray-500;
+      @apply text-sm font-medium;
+      @apply next-input-placeholder-shown:text-base;
       @apply next-input-focus:text-sm;
       /* Placing */
-      @apply bottom-full px-1;
-      @apply next-input-placeholder-shown:bottom-1/2 next-input-placeholder-shown:left-1.5 next-input-placeholder-shown:px-0;
-      @apply next-input-focus:bottom-full next-input-focus:left-2 next-input-focus:px-1;
+      @apply bottom-full px-2;
+      @apply next-input-placeholder-shown:bottom-1/2;
+      @apply next-input-focus:bottom-full next-input-focus:top-0;
     }
   }
 
@@ -26,9 +33,5 @@
     input[type='checkbox'] {
       @apply appearance-none min-w-[18px] min-h-[18px] rounded-sm;
     }
-  }
-
-  .error {
-    @apply text-sm text-red-500;
   }
 }
