--- a/src/TabKeeper.UI.Wasm/_Imports.razor
+++ b/src/TabKeeper.UI.Wasm/_Imports.razor
@@ -1,4 +1,5 @@
-﻿@using System.Net.Http
+﻿@using System.Diagnostics.CodeAnalysis
+@using System.Net.Http
 @using System.Net.Http.Json
 @using System.Reactive.Linq
 @using System.Reactive.Subjects
@@ -21,6 +22,7 @@
 @using Microsoft.JSInterop
 @using TabKeeper
 @using TabKeeper.Components
+@using TabKeeper.Common
 @using Ignis.Components
 @using Ignis.Components.HeadlessUI
 @using Ignis.Components.Reactivity
